Address code review feedback - fix annotation matching and list consistency
Co-authored-by: billy-briggs-dev <37094383+billy-briggs-dev@users.noreply.github.com>